# metal-gear-rust

./: Cargo.toml  README.md  build.rs
src/: audio.rs  main.rs
ui/: app-window.slint  state.slint
ui/components/: card.slint  controls.slint  counter.slint
