[package]
name = "metal-gear-rust"
version = "0.1.1"
edition = "2021"
author = "EdelweissPirate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20"

[build-dependencies]
slint-build = "1.14.1"
winresource = "0.1"

[profile.release]
codegen-units = 1
lto = true
